# Dagger

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  README.md  format.sh  generate_projects.bat  meson.build
.github/workflows/: main.yml
data/: editor.ini
docs/: setting_up_linux.md  setting_up_windows.md
libs/glad/include/glad/: glad.c  glad.h
source/dagger/: main.cpp
source/dagger/core/: audio.cpp  audio.h  audio_linux.cpp  audio_win.cpp  bitenums.h  core.h  engine.cpp  engine.h  files.h  filesystem.h  game.cpp  game.h  savegame.cpp  savegame.h  system.h  view_ptr.h
source/dagger/core/game/: finite_state_machine.h  transforms.cpp  transforms.h
source/dagger/core/graphics/: animation.cpp  animation.h  animations.cpp  animations.h  camera.cpp  camera.h  gui.cpp  gui.h  shader.cpp  shader.h  shaders.cpp  shaders.h  sprite.cpp  sprite.h  sprite_render.cpp  sprite_render.h  text.cpp  text.h  texture.h  textures.cpp  textures.h  tool_render.cpp  tool_render.h  window.cpp  window.h
source/dagger/core/input/: inputs.cpp  inputs.h
source/dagger/core/network/: client.h  common.h  concurrent_queue.h  message.h  server.h
source/dagger/gameplay/PandemicShop/: game_menu.cpp  pandemic_shop_main.cpp  pandemic_shop_main.h
source/dagger/gameplay/common/: aiming_system.cpp  aiming_system.h  jiggle.cpp  jiggle.h  particles.cpp  particles.h  simple_collisions.cpp  simple_collisions.h
source/dagger/gameplay/editor/: editor_main.cpp  editor_main.h  save_archetype.h  savegame_system.h
source/dagger/gameplay/multiplayer/: multiplayer_client.cpp  multiplayer_client.h  multiplayer_client_events.cpp  multiplayer_client_events.h  multiplayer_messages.h  multiplayer_server.cpp  multiplayer_server.h
source/dagger/gameplay/ping_pong/: ping_pong_ai.cpp  ping_pong_ai.h  ping_pong_ball.cpp  ping_pong_ball.h  ping_pong_main.cpp  ping_pong_main.h  ping_pong_player_input.cpp  ping_pong_player_input.h  ping_pong_tools.cpp  ping_pong_tools.h  pingpong_ai.cpp  pingpong_ai.h  pingpong_ball.cpp  pingpong_tools.cpp  player_scores.cpp  player_scores.h
source/dagger/gameplay/platformer/: camera_focus.cpp  camera_focus.h  character_controller_fsm.cpp  parallax.cpp  parallax.h  platformer_controller.cpp  platformer_controller.h  platformer_main.cpp  platformer_main.h
source/dagger/gameplay/racing/: racing_car.cpp  racing_car.h  racing_game_logic.cpp  racing_game_logic.h  racing_main.cpp  racing_main.h  racing_player_car.cpp  racing_player_car.h
source/dagger/gameplay/tanks/: tanks_main.cpp  tanks_main.h
source/dagger/gameplay/team_game/: team_game_main.cpp  team_game_main.h
source/dagger/gameplay/tiles_example/: tiles_example_main.cpp  tiles_example_main.h
source/dagger/tools/: ImSequencer.cpp  console.cpp  console.h  diagnostics.cpp  diagnostics.h  plotvar.cpp  plotvar.h  toolmenu.cpp  toolmenu.h
source/dagger/tools/imgui/: ImFileBrowser.cpp  ImGradient.cpp
tools/BuildScripts/: main.sharpmake.cs
tools/Sharpmake/: Sharpmake.Application.exe.config  Sharpmake.Application.exe.mdb  Sharpmake.CommonPlatforms.dll.mdb  Sharpmake.Generators.dll.mdb  Sharpmake.dll.mdb  sharpmake.commonplatforms.xml  sharpmake.generators.xml  sharpmake.xml
